added email contact feature

--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -68,8 +68,9 @@
 @media (max-width: 500px) {
   .nav-container {
     width: 80%;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 /*# sourceMappingURL=nav.css.map */
