--- a/client/src/components/nav/nav.scss
+++ b/client/src/components/nav/nav.scss
@@ -49,6 +49,6 @@
 @media(max-width: 500px){
     .nav-container{
         width: 80%;
-        justify-content: space-around;
+        justify-content: space-between;
     }
 }
